[package]
name = "ECHO_Thereminoid"
version = "1.0.0"
authors = ["moyashi170607 <96937973+moyashi170607@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ECHO_Thereminoid"
path = "src/main.rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[lib]
harness = false

[dependencies]
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", default-features = false, features = [
    "ch32v003f4p6",
    "embassy",
    "time-driver-tim2",
    "rt",
    "memory-x",
] }

embassy-time = "0.5.0"
qingke-rt = "0.6.1"
qingke = "0.6.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

[profile.dev]
opt-level = "z"

[profile.release]
strip = false     # symbols are not flashed to the microcontroller, so don't strip them.
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

